--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "5.20.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@remix-run/react": "^2.13.1",
+    "@remix-run/node": "^2.13.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "isbot": "^4.1.0",
